--- a/rpm/harbour-sailbikedublin.yaml
+++ b/rpm/harbour-sailbikedublin.yaml
@@ -1,12 +1,12 @@
-Name: SailBikeDublin
+Name: harbour-sailbikedublin
 Summary: SailBikeDublin
 Version: 0.1
 Release: 1
 # The contents of the Group field should be one of the groups listed here:
 # http://gitorious.org/meego-developer-tools/spectacle/blobs/master/data/GROUPS
 Group: Qt/Qt
-URL: http://example.org/
-License: LICENSE
+URL: https://github.com/ShaneQful/SailBikeDublin
+License: MIT
 # This must be generated before uploading a package to a remote build service.
 # Usually this line does not need to be modified.
 Sources:
